[tool.poetry]
name = "repl_python3_TealStupendousMoto"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
KahootPY = "^0.1.4"
git-kahoot = "^0.2.1"
psutil = "^5.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
